# powertochoose

./: .gitignore  DATA_SOURCES.md  HANDOFF.md  README.md  pyproject.toml  requirements.txt  winter-storm-uri-electricity-costs.mdx
notebooks/: uri_impact_analysis.ipynb
reports/: ANALYSIS.md
scripts/: fetch_efls.py  fetch_indexed_plan.py  run_normal_month.py  run_uri_demo.py
src/txpower/: __init__.py  config.py  cost_engine.py  efl_parser.py  ercot_prices.py  models.py  pecanstreet.py  ptc_loader.py  wayback.py
tests/: test_cost_engine.py  test_efl_parser.py  test_ercot_prices.py
